--- a/yhc-frontend/src/app/app.component.html
+++ b/yhc-frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-    <app-homepage></app-homepage>
+    <router-outlet></router-outlet>
 </div>
 <link href="https://unpkg.com/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
