Added signup navbar homepage components

--- a/yhc-frontend/src/app/app.component.html
+++ b/yhc-frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div>
     <router-outlet></router-outlet>
+    <router-outlet name="modal"></router-outlet>
 </div>
 <link href="https://unpkg.com/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
