--- a/yhc-frontend/src/app/signup/signup.component.html
+++ b/yhc-frontend/src/app/signup/signup.component.html
@@ -4,12 +4,12 @@
         <div mat-dialog-content>
             <div>
                 <mat-form-field class="mat-input-wrapper">
-                    <input matInput type="text" formControlName="fName" name="fName" placeholder="First Name" required>
+                    <input matInput type="text" formControlName="firstName" name="firstName" placeholder="First Name" required>
                 </mat-form-field>
             </div>
             <div>
                 <mat-form-field class="mat-input-wrapper">
-                    <input matInput type="text" formControlName="lName" name="lName" placeholder="Last Name" required>
+                    <input matInput type="text" formControlName="lastName" name="lastName" placeholder="Last Name" required>
                 </mat-form-field>
             </div>
             <div>
@@ -30,7 +30,7 @@
         </div>
         <div mat-dialog-actions class="row-flex">
             <div class="col">
-                <button mat-button class="btn btn-primary btn-block button-signup mr-5" [mat-dialog-close] (click)="save()">Sign Up</button>
+                <button mat-button class="btn btn-primary btn-block button-signup mr-5" (click)="save()">Sign Up</button>
             </div>
             <div class="col">
                 <button mat-button class="btn btn-light btn-block button-signup mr-5" mat-dialog-close (click)="close()">Cancel</button>
